--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://localhost:3306/login?useSSL=true
-spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=test
+spring.datasource.password=test
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
@@ -24,15 +24,19 @@ spring.jpa.hibernate.ddl-auto = update
 # ==============================================================
 # = The SQL dialect makes Hibernate generate better SQL for the chosen database
 # ==============================================================
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
-spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.users-query=select email, password, active from public.user where email=?
+spring.queries.roles-query=select u.email, r.role from public.user u inner join public.user_role ur on(u.user_id=ur.user_id) inner join public.role r on(ur.role_id=r.role_id) where u.email=?
+select u.email, r.role from public.user u inner join public.user_role ur on(u.user_id=ur.user_id) inner join public.role r on(ur.role_id=r.role_id) where u.email="qwe@mail.ru"
 
 # ==============================================================
 # = Initialize the database using data.sql script
 # ==============================================================
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
